--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,9 @@
 <header>
 
   <nav class="navbar navbar-expand-md navbar-light bg-light-grey">
-    <%= link_to root_path, class: "navbar-brand" do %><strong>TOCA Cares</strong><% end %>
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag "TOCA_CARES_LOGO_FNL.png", style: "height: 30px", alt: "TOCA Cares Logo" %>
+    <% end %>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
