--- a/app/views/pages/mission.html.erb
+++ b/app/views/pages/mission.html.erb
@@ -7,7 +7,7 @@
       <h3 class="text-center dark-grey-text w-responsive mx-auto mb-5">"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur." -Author</h3>
 
       <div class="view">
-        <img src="https://mdbootstrap.com/img/Photos/Others/forest-sm.jpg" class="img-fluid" alt="placeholder">
+        <img src="https://tocacares.s3-us-west-1.amazonaws.com/IMG_4161+(Net+Background).JPG" class="img-fluid" alt="placeholder">
         <div class="mask flex-center waves-effect waves-light rgba-black-strong">
           <h4 class="text-center white-text w-responsive mx-auto">Duis aute irure dolor in reprehenderit in
             voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
