--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -15,13 +15,15 @@
 
           <div class="view overlay rounded z-depth-2 mb-4">
             <%= image_tag "scholarship.jpg", class: "img-fluid", alt: "Young woman graduating from college." %>
-            <a><div class="mask rgba-white-slight"></div></a>
+            <%= link_to new_scholarship_path do %>
+              <div class="mask rgba-white-slight"></div>
+            <% end %>
           </div>
 
           <h4 class="font-weight-bold mb-3 toca-uppercase"><strong>Scholarship</strong></h4>
           <p class="dark-grey-text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit
             quo minus id quod maxime placeat facere possimus voluptas.</p>
-          <a class="btn btn-primary btn-lg">Read more</a>
+          <%= link_to "Apply Now", new_scholarship_path, class: "btn btn-primary btn-lg" %>
 
         </div> <!-- Grid column -->
 
@@ -37,7 +39,7 @@
           <h4 class="font-weight-bold mb-3 toca-uppercase"><strong>Hardship</strong></h4>
           <p class="dark-grey-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
             voluptatum deleniti atque corrupti quos dolores.</p>
-          <%= link_to "Apply for Hardship", new_hardship_path, class: "btn btn-primary btn-lg" %>
+          <%= link_to "Apply Now", new_hardship_path, class: "btn btn-primary btn-lg" %>
 
         </div> <!-- Grid column -->
 
@@ -45,13 +47,15 @@
 
           <div class="view overlay rounded z-depth-2 mb-4">
             <%= image_tag "charity.jpg", class: "img-fluid", alt: "Young man building a house for charity." %>
-            <a><div class="mask rgba-white-slight"></div></a>
+            <%= link_to new_charity_path do %>
+              <div class="mask rgba-white-slight"></div>
+            <% end %>
           </div>
 
           <h4 class="font-weight-bold mb-3 toca-uppercase"><strong>Charity</strong></h4>
           <p class="dark-grey-text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
             quia consequuntur magni dolores eos qui ratione.</p>
-          <a class="btn btn-primary btn-lg">Read more</a>
+          <%= link_to "Apply Now", new_charity_path, class: "btn btn-primary btn-lg" %>
 
         </div> <!-- Grid column -->
 
