--- a/app/views/pages/contribute.html.erb
+++ b/app/views/pages/contribute.html.erb
@@ -1,4 +1,4 @@
-<main class="mt-5">
+<main class="my-5">
   <div class="container">
 
     <h1 class="text-center">Contribute</h1>
@@ -19,7 +19,7 @@
     </section> <!-- mission description -->
 
 
-    <div class="text-center mt-4 mb-3">
+    <div class="text-center mt-5 mb-3">
       <%= link_to page_path(:apply), class: "btn btn-primary btn-lg" do %>Contribute Now<% end %>
     </div> <!-- center for button -->
 
